syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";
import "material_channel_layer.proto";

message MaterialChannelProposingRecordInfo{
    string id=1;
    //料道
    string materialChannelID=2;
    MaterialChannelInfo materialChannel=3;
    //叫料时间
    string requestTime=4;
    //补料时间
    string responseTime=5;
    //候料时长
    int64 duration=6;
    //当前状态
    string currentState=7;
    //状态变更时间
    string lastUpdateTime=8;
}

message QueryMaterialChannelProposingRecordRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//叫料时间开始
	// @inject_tag: uri:"requestTime0" form:"requestTime0"
    string requestTime0=4;
	//叫料时间结束
	// @inject_tag: uri:"requestTime1" form:"requestTime1"
    string requestTime1=5;
    // 代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=6;
	// 产线ID
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=7;
}

message QueryMaterialChannelProposingRecordResponse{
    Code code=1;
    string message=2;
    repeated MaterialChannelProposingRecordInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMaterialChannelProposingRecordResponse{
    Code code=1;
    string message=2;
    repeated MaterialChannelProposingRecordInfo data=3;
}

message GetMaterialChannelProposingRecordDetailResponse{
    Code code=1;
    string message=2;
    MaterialChannelProposingRecordInfo data=3;
}